--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -3,6 +3,7 @@ asdf
 Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
 - GvG\prtg_cas02.txt - Corrected Prontera Castle Emperium Location. [AlexKreuz]
+- GvG\npc_gflag.txt - Corrected Geffen and Aldebaron Flags to looks for coresponding Empellium.
 
 ----------------------------------------------------------------------------------------------------
 Fusion NPC Pack - 1.001
