Added update information
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1660 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -2,8 +2,9 @@ asdf
 ----------------------------------------------------------------------------------------------------
 Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- GvG\prtg_cas02.txt - Adjusted Prontera Castle Emperium Location and Flags that were supposed to be near it. [Tsusai]
+- GvG\npc_gflag.txt - Corrected Geffen and Aldebaron Flags to looks for coresponding Empelliums. [Tsusai]
 - GvG\prtg_cas02.txt - Corrected Prontera Castle Emperium Location. [AlexKreuz]
-- GvG\npc_gflag.txt - Corrected Geffen and Aldebaron Flags to looks for coresponding Empelliums.  [Tsusai]
 
 ----------------------------------------------------------------------------------------------------
 Fusion NPC Pack - 1.001
