--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -2,6 +2,7 @@
 ----------------------------------------------------------------------------------------------------
 Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Doll.txt - Fixed page header, cleaned up script, removed unused comments. [mudvayne]
 - Event\Event_Card-Seller.txt - Fixed page header, cleaned up script. [mudvayne]
 - Event\Event_Potion.txt - Fixed page header, cleaned up script and fixed missing " in npc names. [mudvayne]
 - Event\Event_Bunny.txt - Fixed page header, Npc Names. [mudvayne]
