--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,3 +1,10 @@
+====================================================================================================
+»» The Fusion Project ««
+Copyright (c) 2004, Cobax Information Systems
+http://fusion.cobax.net/
+----------------------------------------------------------------------------------------------------
+Scripts Change Logs
+====================================================================================================
 
 ----------------------------------------------------------------------------------------------------
 Fusion NPC Pack - 1.002
