Added update information
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1680 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Translated Eric the Earmuff maker, matches iRO with grammar corrections - [Tsusai]
+- Warp\warp.txt - Corrected Geffen Tower staircase warp destination to avoid appearing stuck on a rail - [Tsusai]
 - Event\Event_Solution.txt - Fixed page header [mudvayne]
 - Event\Event_Rental.txt - Fixed page header, mising [npc name], enabled Crusader support for peco breeder. [mudvayne]
 - Event\Event_Doll.txt - Fixed page header, cleaned up script, removed unused comments. [mudvayne]
