--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Translated Granny, Pretend Murderer Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Eric the Earmuff maker, matches iRO with grammar corrections - [Tsusai]
 - Warp\warp.txt - Corrected Geffen Tower staircase warp destination to avoid appearing stuck on a rail - [Tsusai]
 - Event\Event_Solution.txt - Fixed page header [mudvayne]
