- Event\Event_Making.txt - Translated Cherokee, Antlers Quest. [mudvayne] - Event\Event_Making.txt - Translated Blacksmith, Welding Mask Quest. [mudvayne]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1682 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Translated Cherokee, Antlers Quest. [mudvayne]
+- Event\Event_Making.txt - Translated Blacksmith, Welding Mask Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Granny, Pretend Murderer Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Eric the Earmuff maker, matches iRO with grammar corrections - [Tsusai]
 - Warp\warp.txt - Corrected Geffen Tower staircase warp destination to avoid appearing stuck on a rail - [Tsusai]
