--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Translated William, Stop Post Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Cherokee, Antlers Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Blacksmith, Welding Mask Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Granny, Pretend Murderer Quest. [mudvayne]
