- Event\Event_Making.txt - Translated Marius, Binoculars Quest. [mudvayne]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1688 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Translated Marius, Binoculars Quest. [mudvayne]
 - Event\Event_Making.txt - Corrected Eric, was missing a lil translation and added Eric to page header. [mudvayne]
 - Event\Event_Making.txt - Translated Boy, Oxygen Mask Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Teacher, PhD Hat Quest. [mudvayne]
