--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Translated Mistic Lady, Ear Muffs Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Grampa, Boy's Cap Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Marius, Binoculars Quest. [mudvayne]
 - Event\Event_Making.txt - Corrected Eric, was missing a lil translation and added Eric to page header. [mudvayne]
