- Event\Event_Making.txt - Translated Trader, Doctor Band, Feather Bonnet, Phantom of Opera and Sakkat Quest. [mudvayne]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1691 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Translated Trader, Doctor Band, Feather Bonnet, Phantom of Opera and Sakkat Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Mistic Lady, Ear Muffs Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Grampa, Boy's Cap Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Marius, Binoculars Quest. [mudvayne]
