--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Warp\warp_arena_test.txt - Moved the Quest_Arena_Test.txt warps here. [mudvayne]
+- Quest\Quest_Arena_Test.txt - Fixed page header, cleaned script. [mudvayne]
 - Event\Event_Making.txt - Translated Trader, Doctor Band, Feather Bonnet, Phantom of Opera and Sakkat Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Mistic Lady, Ear Muffs Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Grampa, Boy's Cap Quest. [mudvayne]
