- Town\Town_Alberta.txt - Fixed the missing " in npc names. [mudvayne]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1695 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Alberta.txt - Fixed the missing " in npc names. [mudvayne]
 - Quest\Quest_Pet_Food_Quest.txt - Fixed the missing .gat in npc mapname, Fixed page header and cleaned script. [mudvayne]
 - Warp\warp_arena_test.txt - Moved the Quest_Arena_Test.txt warps here. [mudvayne]
 - Quest\Quest_Arena_Test.txt - Fixed page header, cleaned script. [mudvayne]
