--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Corrected grammar and spelling mistakes. [Tsusai]
 - Town\Town_Alberta.txt - Fixed the missing " in npc names. [mudvayne]
 - Quest\Quest_Pet_Food_Quest.txt - Fixed the missing .gat in npc mapname, Fixed page header and cleaned script. [mudvayne]
 - Warp\warp_arena_test.txt - Moved the Quest_Arena_Test.txt warps here. [mudvayne]
@@ -24,17 +25,17 @@
 - Event\Event_Making.txt - Translated Cherokee, Antlers Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Blacksmith, Welding Mask Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Granny, Pretend Murderer Quest. [mudvayne]
-- Event\Event_Making.txt - Translated Eric the Earmuff maker, matches iRO with grammar corrections - [Tsusai]
-- Warp\warp.txt - Corrected Geffen Tower staircase warp destination to avoid appearing stuck on a rail - [Tsusai]
+- Event\Event_Making.txt - Translated Eric the Earmuff maker, matches iRO with grammar corrections. [Tsusai]
+- Warp\warp.txt - Corrected Geffen Tower staircase warp destination to avoid appearing stuck on a rail. [Tsusai]
 - Event\Event_Solution.txt - Fixed page header [mudvayne]
-- Event\Event_Rental.txt - Fixed page header, mising [npc name], enabled Crusader support for peco breeder. [mudvayne]
+- Event\Event_Rental.txt - Fixed page header, missing [npc name], enabled Crusader support for peco breeder. [mudvayne]
 - Event\Event_Doll.txt - Fixed page header, cleaned up script, removed unused comments. [mudvayne]
 - Event\Event_Card-Seller.txt - Fixed page header, cleaned up script. [mudvayne]
 - Event\Event_Potion.txt - Fixed page header, cleaned up script and fixed missing " in npc names. [mudvayne]
 - Event\Event_Bunny.txt - Fixed page header, Npc Names. [mudvayne]
 - Event\Event_MrSmile.txt - Fixed page header, Npc Names and Npc Sprite. [mudvayne]
 - Event\Event_MobTim.txt - Translated Iwado Npc and fixed script header. [mudvayne]
-- Warp\warp.txt - Fixed Prontera Castle Warp Coodrinates For the Empelium Room [Tsusai]
+- Warp\warp.txt - Fixed Prontera Castle Warp Coodrinates For the Empelium Room. [Tsusai]
 - GvG\prtg_cas02.txt - Adjusted Prontera Castle Emperium Location and Flags that were supposed to be near it. [Tsusai]
 - GvG\npc_gflag.txt - Corrected Geffen and Aldebaron Flags to looks for coresponding Empelliums. [Tsusai]
 - GvG\prtg_cas02.txt - Corrected Prontera Castle Emperium Location. [AlexKreuz]
