corrected errors on my part
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1700 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Corrected accidental script error. - [Tsusai]
 - Event\Event_Making.txt - Corrected grammar and spelling mistakes. [Tsusai]
 - Town\Town_Alberta.txt - Fixed the missing " in npc names. [mudvayne]
 - Quest\Quest_Pet_Food_Quest.txt - Fixed the missing .gat in npc mapname, Fixed page header and cleaned script. [mudvayne]
