--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Siglude.txt - Translated Vurewell, Sade, Begnahd and Kahlamanlith, Phracon and Emveretarcon provider, also fixed missing " in npc names. [mudvayne]
 - Event\Event_MobTim.txt - Translated all 90% of Monster Tamer Shogo. [Tsusai]
 - Event\Event_Making.txt - Corrected accidental script error. [Tsusai]
 - Event\Event_Making.txt - Corrected grammar and spelling mistakes. [Tsusai]
