--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Warp\warp.txt - Corrected/Added Warps in Al De Baron Guild Castle 4. [Tsusai]
 - Shop\Shop.txt - Added Umbala shop entry. [mudvayne]
 - Town\Town_Umbala.txt - Removed shops entry here and moved to shop.txt [mudvayne]
 - Town\Town_Kafra.txt - Added the kafra from other Town_X.txt files. [mudvayne]
