Added update information -Tsusai
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1727 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Jellopy.txt - Checked and added Event_Jellopy. [Tsusai]
 - Warp\warp.txt - Added Alde_alche warps. [Tsusai]
 - NPC\npc_skill_get.txt - Fixed AL_Holylight Job requirements. [AlexKreuz]
 - Warp\warp_arena_room.txt - Added new warp portals. [Tsusai]
