--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Added Zic, 4 new quest hat items. [mudvayne]
 - Event\Event_Jellopy.txt - Checked and added Event_Jellopy. [Tsusai]
 - Warp\warp.txt - Added Alde_alche warps. [Tsusai]
 - NPC\npc_skill_get.txt - Fixed AL_Holylight Job requirements. [AlexKreuz]
