- Event\ - Removed Event_Card-Seller.txt and Event_NewHatsX.txt and moved to Archive. [mudvayne]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1733 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\ - Removed Event_Card-Seller.txt and Event_NewHatsX.txt and moved to Archive. [mudvayne]
 - Event\Event_Making.txt - Added Audi and Titicupe, 8 new quest hat items. [mudvayne]
 - Event\Event_Making.txt - Added Hair Ornament girl, 4 new quest hat items. [mudvayne]
 - Event\Event_Making.txt - Added Isac Mari, 4 new quest hat items. [mudvayne]
