- Event\Event_Dye.txt - Fixed missing " in npc names and header. [mudvayne]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1736 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Dye.txt - Fixed missing " in npc names and header. [mudvayne]
 - Shop\Shop.txt - Moved to new filename system. [mudvayne]
 - Event\ - Removed Event_Card-Seller.txt and Event_NewHatsX.txt and moved to Archive. [mudvayne]
 - Event\Event_Making.txt - Added Audi and Titicupe, 8 new quest hat items. [mudvayne]
