--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- GvG\*.txt - Fixed miss placed npcs. [mudvayne]
 - GvG\*.txt - Cleaned scripts, added missing " in npc names, fixed push cart check bug, fixed option check bug, added support for alchimist in kafra cart rent. [mudvayne]
 - GvG\npc_gflag.txt - Removed 5 none-official flags, added option for guild member to warp at guild base. [mudvayne]
 - GvG\npc_emperium.txt - Moved all guild base emperiums here. [mudvayne]
