- Warp\*.txt - Moved to new filename system. [mudvayne]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1743 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Warp\*.txt - Moved to new filename system. [mudvayne]
 - Mob\*.txt - Moved to new filename system. [mudvayne]
 - GvG\*.txt - Fixed miss placed npcs. [mudvayne]
 - GvG\*.txt - Cleaned scripts, added missing " in npc names, fixed push cart check bug, fixed option check bug, added support for alchimist in kafra cart rent. [mudvayne]
