- Warp\\Towns\\Amatsu.txt - Added 2 houses and renumbered warps. [Tsusai] - Quest\\Quest_Legendary_Blacksmith.txt - Added the Blacksmith Quest.  [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1746 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Warp\Towns\Amatsu.txt - Added 2 houses and renumbered warps. [Tsusai]
+- Quest\Quest_Legendary_Blacksmith.txt - Added the Blacksmith Quest.  [Tsusai]
 - Warp\*.txt - Moved to new filename system. [mudvayne]
 - Mob\*.txt - Moved to new filename system. [mudvayne]
 - GvG\*.txt - Fixed miss placed npcs. [mudvayne]
