--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Quest\Quest_Arena_Test.txt - Updated map names. [Tsusai]
 - Shop\Comodo.txt - Added Instruments and Whips to weapon shop. [mudvayne]
 - Warp\Towns\Amatsu.txt - Added 2 houses and renumbered warps. [Tsusai]
 - Quest\Quest_Legendary_Blacksmith.txt - Added the Blacksmith Quest.  [Tsusai]
