--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- GvG\npc_gflag.txt - Fixed typo error "cancel". [mudvayne]
 - Town\Town_Aldebaran.txt - Fixed missing " in npc names, translated some npc names, cleaned script. [mudvayne]
 - Town\Town_Amatsu.txt - Fixed missing " in npc names, cleaned script. [mudvayne]
 - GvG\*.txt - Updated Guild Base Flag names. [mudvayne]
