--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -17,7 +17,7 @@
 - Quest\Quest_Arena_Test.txt - Updated map names. [Tsusai]
 - Shop\Comodo.txt - Added Instruments and Whips to weapon shop. [mudvayne]
 - Warp\Towns\Amatsu.txt - Added 2 houses and renumbered warps. [Tsusai]
-- Quest\Quest_Legendary_Blacksmith.txt - Added the Blacksmith Quest.  [Tsusai]
+- Quest\Quest_Legendary_Blacksmith.txt - Added the Blacksmith Quest. [Tsusai]
 - Warp\*.txt - Moved to new filename system. [mudvayne]
 - Mob\*.txt - Moved to new filename system. [mudvayne]
 - GvG\*.txt - Fixed miss placed npcs. [mudvayne]
@@ -40,7 +40,7 @@
 - Town\Town_Siglude.txt - Fixed, can't refine accesories and mid/low headgears and fixed the chance of success. [mudvayne]
 - Warp\warp.txt - Corrected/Added Warps in Al De Baron Guild Castle 4. [Tsusai]
 - Shop\Shop.txt - Added Umbala shop entry. [mudvayne]
-- Town\Town_Umbala.txt - Removed shops entry here and moved to shop.txt [mudvayne]
+- Town\Town_Umbala.txt - Removed shops entry here and moved to shop.txt. [mudvayne]
 - Town\Town_Kafra.txt - Added the kafra from other Town_X.txt files. [mudvayne]
 - Town\Town_Umbala.txt - Removed 1 kafra and moved to Town_Kafra.txt. [mudvayne]
 - Town\Town_Juno.txt - Removed 3 kafra and moved to Town_Kafra.txt. [mudvayne]
@@ -52,7 +52,7 @@
 - Npc\npc_merchant_guide.txt - Added Merchant guidelines for dummies bookshelf in prontera library. [mudvayne]
 - Npc\npc_bookshelf.txt - Added mage quest bookshelf. [mudvayne]
 - Npc\npc_ancyclopedia.txt -Added Monsters Ancyclopedia in prontera library. [mudvayne]
-- Shop\Shop.txt - Cleaned shops, fixed Comodo Shops, fixed pet merchants, removed carnival shops? (useless) [mudvayne]
+- Shop\Shop.txt - Cleaned shops, fixed Comodo Shops, fixed pet merchants, removed carnival shops? (useless). [mudvayne]
 - Shop\Shop.txt - Removed Old Refiners Shops. [mudvayne]
 - Town\Town_Siglude.txt - Enabled Vurewell, Sade, Begnahd and Kahlamanlith Npcs. [mudvayne]
 - Event\Event_KafraP.txt - Translated Kafra point leader and removed useless comments. [mudvayne]
@@ -79,8 +79,8 @@
 - Event\Event_Making.txt - Translated Granny, Pretend Murderer Quest. [mudvayne]
 - Event\Event_Making.txt - Translated Eric the Earmuff maker, matches iRO with grammar corrections. [Tsusai]
 - Warp\warp.txt - Corrected Geffen Tower staircase warp destination to avoid appearing stuck on a rail. [Tsusai]
-- Event\Event_Solution.txt - Fixed page header [mudvayne]
-- Event\Event_Rental.txt - Fixed page header, missing [npc name], enabled Crusader support for peco breeder. [mudvayne]
+- Event\Event_Solution.txt - Fixed page header. [mudvayne]
+- Event\Event_Rental.txt - Fixed page header, missing. [npc name], enabled Crusader support for peco breeder. [mudvayne]
 - Event\Event_Doll.txt - Fixed page header, cleaned up script, removed unused comments. [mudvayne]
 - Event\Event_Card-Seller.txt - Fixed page header, cleaned up script. [mudvayne]
 - Event\Event_Potion.txt - Fixed page header, cleaned up script and fixed missing " in npc names. [mudvayne]
