- Officialized Bunny Band Quest. [AlexKreuz]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1756 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Officialized Bunny Band Quest. [AlexKreuz]
 - GvG\npc_gflag.txt - Fixed typo error "cancel". [mudvayne]
 - Town\Town_Aldebaran.txt - Fixed missing " in npc names, translated some npc names, cleaned script. [mudvayne]
 - Town\Town_Amatsu.txt - Fixed missing " in npc names, cleaned script. [mudvayne]
