- Warp\\town\\Izlude.txt - Removed unneeded double warp (warp0417). [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1762 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Warp\town\Izlude.txt - Removed unneeded double warp (warp0417). [Tsusai]
 - Warp\town\Niflheim.txt - Added Niflheim town warps. [Tsusai]
 - Warp\fields\nif_fild.txt - Added Niflheim field warps. [Tsusai]
 - Warp\fields\yggdrasil.txt - Added yggdrasil field warps. [Tsusai]
