- Town\Town_Juno.txt - Moved 3 npc to there respected files, fixed missing " in npc names. [mudvayne] - Job\Job22_Sage.txt - Moved this job changer from Town_Juno.txt here. [mudvayne] - Town\Town_Siglude.txt - Moved the two Town_Juno.txt forge npcs here. [mudvayne]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1763 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.002
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Juno.txt - Moved 3 npc to there respected files, fixed missing " in npc names. [mudvayne]
+- Job\Job22_Sage.txt - Moved this job changer from Town_Juno.txt here. [mudvayne]
+- Town\Town_Siglude.txt - Moved the two Town_Juno.txt forge npcs here. [mudvayne]
 - Warp\town\Izlude.txt - Removed unneeded double warp (warp0417). [Tsusai]
 - Warp\town\Niflheim.txt - Added Niflheim town warps. [Tsusai]
 - Warp\fields\nif_fild.txt - Added Niflheim field warps. [Tsusai]
